# ContextGoverning

./: .gitignore  .pre-commit-config.yaml  Configuration_management.md  Makefile  README.md  README_cn.md  README_en.md  app_architecture_design.md  database_design.md  docker-compose.yml  initialization_manual.md  interface_design.md  plugin-manifest.json  verify_endpoints.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: audit.py  rate_limit.py  rbac.py  security.py
backend/app/integrations/: email_client.py  feishu_bot.py  feishu_client.py  finance_client.py  memory_md_parser.py  project_kb_client.py
backend/app/models/: _types.py  api_key.py  audit.py  base.py  config_change_log.py  context.py  context_entity.py  entity.py  jwt_config.py  notification.py  permission.py  push_log.py  push_rule.py  relation.py  review_feedback.py  system_config.py  tag.py  user.py  user_setting.py  webhook_delivery_log.py  workspace.py
backend/app/pipelines/: dedup_pipeline.py  feishu_pipeline.py  memory_md_pipeline.py  project_kb_pipeline.py
backend/app/schemas/: context.py
backend/app/services/: adapter.py  api_key_auth.py  bm25_service.py  classification_learning_service.py  classification_service.py  confidence_calibration_service.py  confidence_service.py  config_service.py  conflict_service.py  context_service.py  custom_token_auth.py  distribution_service.py  entity_service.py  (+18 more)
sdk/python/: pyproject.toml
(+65 files in other folders)
