[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-platform-client"
version = "1.0.0"
description = "Python SDK for Context Platform — unified context management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]
